--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -6,6 +6,15 @@ img.lehrer{
     width:200px;
     max-height:200px;
 }
+.fenster{
+    margin:20px;
+    background-color:rgba(0,0,255,0.1);
+    border-radius:10px;
+    padding:20px;
+}
+textarea{
+    width:100%;
+}
 .chgPw{
     width:50%;
 }
