teacherview had a bad design.

--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -1,3 +1,12 @@
+.teacher-aendern-name{
+    margin-top:30px;    
+}
+
+.teacher-textgroesse-bearbeiten{
+    font-size:17pt;
+    
+}
+
 .navbar-header {
     padding: 15px;
     padding-bottom:0px;
