--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -42,7 +42,7 @@ textarea{
 .feedbackbox, .frage{
     background-color:#EEE;
     padding:5px;
-    padding-bottom:50px;
+    padding-bottom:5px;
     min-height:230px;
     margin-bottom:20px;
 }
@@ -56,7 +56,7 @@ textarea{
     margin-top:10px;
     padding:0px;
     float:right;
-    min-height:0px;
+    width:100%;
 }
 .thumbnail{
     display:block;
