--- a/laravel/public/css/style.css
+++ b/laravel/public/css/style.css
@@ -7,6 +7,12 @@
     
 }
 
+.loginposition{
+    
+    width:300px;
+    margin:auto;
+}
+
 .navbar-header {
     padding: 15px;
     padding-bottom:0px;
